kubernetes/apps/media/tautulli/app.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli
  namespace: media
spec:
  serviceName: tautulli
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9794"
        prometheus.io/path: "/metrics"
    spec:
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: exportarr
          image: ghcr.io/onedr0p/exportarr:v2.0.0
          imagePullPolicy: IfNotPresent
          args: ["tautulli"]
          ports:
            - containerPort: 9794
              name: metrics
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
        - name: tautulli
          image: lscr.io/linuxserver/tautulli:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8181
              name: http
          readinessProbe:
            httpGet:
              path: /status
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /status
              port: http
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /status
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              memory: 256Mi
              cpu: "100m"
            limits:
              memory: 256Mi
              cpu: "500m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tautulli-config
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: media
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.71.172
  ports:
    - port: 8181
      targetPort: 8181
      name: http
  selector:
    app: tautulli
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tautulli
  namespace: media
spec:
  hosts:
    - "tautulli.bavsworld.com"
  gateways:
    - istio-system/default-gateway
  http:
    - route:
        - destination:
            host: tautulli
            port:
              number: 8181
